merge customer and employee to user